Add Photo to product

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :name
     = f.input :description
+    = f.attachment_field :photo
 
   .form-actions
     = f.button :submit
