--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -21,5 +21,5 @@
               %span.glyphicon.glyphicon-edit
           = link_to product, { method: :delete, title: 'Delete',data: { confirm: 'Are you sure?' } } do
             %button.btn.btn-default
-              %span.glyphicon.glyphicon-time
+              %span.glyphicon.glyphicon-remove
 %br
