--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -6,6 +6,8 @@
 %p
   %b Description:
   = @product.description
+%p
+  = image_tag attachment_url(@product, :photo, :fill, 300, 300, format: "jpg")
 
 = link_to 'Edit', edit_product_path(@product)
 \|
