--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,17 +1,18 @@
 .authform
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form' }) do |f|
-    %h3 Sign up
+  = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+    %h3 #{resource.role.capitalize} sign up
     = devise_error_messages!
-    .form-group
-      = f.label :name
-      = f.text_field :name, :autofocus => true, class: 'form-control'
-    .form-group
-      = f.label :email
-      = f.email_field :email, class: 'form-control'
-    .form-group
-      = f.label :password
-      = f.password_field :password, class: 'form-control'
-    .form-group
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, class: 'form-control'
-    = f.submit 'Sign up', :class => 'button right'
+    = f.hidden_field :role
+    .form-inputs
+      =f.input :name, autofocus: true
+      =f.input :last_name if resource.admin?
+      =f.input :email
+      =f.input :password
+      =f.input :password_confirmation
+      =f.input :shop_name if resource.owner?
+      .form-group
+        =f.attachment_field :avatar if resource.admin?
+      .form-group
+        =f.attachment_field :passport_photo if resource.admin?
+    .form-actions
+      = f.button :submit, 'Sing Up'
