--- a/app/views/owners_registrations/new.html.haml
+++ b/app/views/owners_registrations/new.html.haml
@@ -1,11 +1,12 @@
 .authform
   = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-    %h3 Visitor sign up
+    %h3 Shop owner sign up
     = devise_error_messages!
     .form-inputs
       =f.input :name, autofocus: true
       =f.input :email
       =f.input :password
       =f.input :password_confirmation
+      =f.input :shop_name
     .form-actions
       = f.button :submit, 'Sign Up'
